# sam-finetuning

./: README.md  pyproject.toml  requirements.txt
dataset/: README.md  get_masks.py  scrap_images.py
sam/: README.md  callbacks.py  main.py  sam_dataset.py  trainer.py
